[gd_scene load_steps=13 format=3 uid="uid://lu6swbk1rmbt"]

[ext_resource type="ArrayMesh" uid="uid://dfumh3oytegeu" path="res://Assets/Towers/Basic/cannonLarge.obj" id="1_e8l4m"]
[ext_resource type="Script" path="res://Scripts/tower.gd" id="1_grxgh"]
[ext_resource type="ArrayMesh" uid="uid://ytpgoa41mp8n" path="res://Assets/Towers/Basic/towerBase.obj" id="2_yaeww"]
[ext_resource type="Material" uid="uid://d004fqwve1v62" path="res://Scenes/Towers/reg_turret.tres" id="3_dvl1a"]
[ext_resource type="Material" uid="uid://cuqn2no5836jb" path="res://Scenes/Towers/red_turret2.tres" id="4_f5xcu"]
[ext_resource type="PackedScene" uid="uid://dm54dvratkexs" path="res://Scenes/Tools/selection_area.tscn" id="4_gcayb"]
[ext_resource type="Material" uid="uid://dp77ddcymgt58" path="res://Scenes/Towers/invalid.tres" id="5_honrx"]
[ext_resource type="Material" uid="uid://filk0gtrr6wc" path="res://Scenes/Towers/reg_turret3.tres" id="5_o1f3c"]
[ext_resource type="Material" uid="uid://dp0dtdjg31d0t" path="res://Scenes/Towers/reg_base2.tres" id="6_my62x"]
[ext_resource type="Material" uid="uid://0pfep6p8iyd6" path="res://Scenes/Towers/reg_base1.tres" id="7_17qsf"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_3ltaw"]
height = 32.7191
radius = 51.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nrqgf"]
height = 23.5101
radius = 5.01451

[node name="Tower" type="Node3D"]
transform = Transform3D(-0.5, 0, -4.37114e-08, 0, 0.5, 0, 4.37114e-08, 0, -0.5, 0, 0, 0)
script = ExtResource("1_grxgh")

[node name="Height" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 16.6175, 0)

[node name="Turret" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.1323, 0)
mesh = ExtResource("1_e8l4m")
surface_material_override/0 = ExtResource("3_dvl1a")
surface_material_override/1 = ExtResource("4_f5xcu")
surface_material_override/2 = ExtResource("5_o1f3c")

[node name="muzzle" type="Node3D" parent="Turret"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 3.24261, -5.60486)

[node name="Timer" type="Timer" parent="Turret"]
one_shot = true

[node name="TowerBase" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.03033, 0, -4.72414)
mesh = ExtResource("2_yaeww")
surface_material_override/0 = ExtResource("7_17qsf")
surface_material_override/1 = ExtResource("6_my62x")

[node name="Area3D" type="Area3D" parent="."]
collision_mask = 4
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(0.999742, 0, 0, 0, 0.999742, 0, 0, 0, 0.999742, 0, 11.122, 0)
shape = SubResource("CylinderShape3D_3ltaw")

[node name="Selection Area" parent="." instance=ExtResource("4_gcayb")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Selection Area"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.465, 0)
shape = SubResource("CylinderShape3D_nrqgf")

[node name="invalid_Turret2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 13.1323, 0)
mesh = ExtResource("1_e8l4m")
surface_material_override/0 = ExtResource("5_honrx")
surface_material_override/1 = ExtResource("5_honrx")
surface_material_override/2 = ExtResource("5_honrx")

[node name="invalid_TowerBase2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.03033, 0, -4.72414)
mesh = ExtResource("2_yaeww")
surface_material_override/0 = ExtResource("5_honrx")
surface_material_override/1 = ExtResource("5_honrx")

[connection signal="timeout" from="Turret/Timer" to="." method="_on_timer_timeout"]
[connection signal="select_toggled" from="Selection Area" to="." method="_on_selection_area_select_toggled"]
